--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@
     <link rel="stylesheet" href="style.css">
     <title>Home-Page</title>
 </head>
-<body style="text-align: center;">
-
-    <h1 ></h1>
-    Página Inicial
-</h1>
-
+<body>
+    <h1 style="text-align: center;">
+        Página Inicial
+    </h1>
     <div class="login">
-     <h3>Login</h3>
-     <input type="text" placeholder="Digite seu login" id="login"><br>
-     <input type="password" placeholder="Digite sua senha" id="password"><br>
-     <button onclick="login()">Logar</button>
-    
-    </div>
-
+        <h3>Login</h3>
+        <input type="text" placeholder="Digite seu login" id="login"><br>
+        <input type="password" placeholder="Digite sua senha" id="password"><br>
+        <button onclick="login()">Logar</button>
+    </div><br>
     <div class="register">
         <h3>Registrar</h3>
-        <input type="text" placeholder="Digite seu login" id="novologin"><br>
+        <input type="text" placeholder="Digite seu login" id="novoLogin"><br>
         <input type="password" placeholder="Digite sua senha" id="novaSenha"><br>
-        <input type="password" placeholder="Digite sua senha" id="repSenha"><br>
+        <input type="password" placeholder="Repita sua senha" id="repSenha"><br>
         <button onclick="cadastra()">Cadastrar</button>
     </div>
-    <script> src="scripts.js"</script>   
-
+    <script src="script.js"></script>
 </body>
 </html>
